# scripts

./: .gitignore  README.org  pyproject.toml
scripts/: checkout_branch.py  download_xyzfm.py  list_scripts.py  purge_sp_with_eths.py
